--- a/src/pages/en/introduction.mdx
+++ b/src/pages/en/introduction.mdx
@@ -1,99 +1,73 @@
 ---
 layout: '@/layouts/Markdown.astro'
 title: Introduction
-description: Quick introduction to the project.
+description: Welcome to my personal blog and documentation site.
 ---
 
-## About the project
+## Welcome to My Blog! 👋
 
-Stellar is documentation theme for Astro.js.
+Hello! I'm **Yui Amai**, and this is my personal blog and documentation site. I'm passionate about programming, learning new technologies, and sharing knowledge with others.
 
-The main purpose of this project
-is to give framework and library creators and maintainers a docs template they can use so they can focus more on
-writing the docs (markdown files), rather than setting up the whole docs project.
+## What You'll Find Here
 
-## Features
+This blog serves as a platform for me to:
+
+- 📝 **Share my thoughts** on programming and technology
+- 🚀 **Document my learning journey** as I explore new tools and frameworks
+- 💡 **Write tutorials and guides** that might help others
+- 🎯 **Showcase my projects** and the things I'm working on
+- 🌍 **Connect with fellow developers** who share similar interests
+
+## My Focus Areas
 
 <ul>
-  <li>Astro v4</li>
-  <li>Dark mode</li>
-  <li>I18n (type safe)</li>
-  <li>MD & MDX support</li>
-  <li>Search powered by fuse.js</li>
-  <li>Tailwind styling</li>
-  <li>View transitions API</li>
-  <li>Responsive & SEO-friendly</li>
-  <li>Shiki code syntax styling</li>
-  <li>Custom import path</li>
+  <li>🚀 **Web Development** - Modern frameworks and tools</li>
+  <li>🐍 **Python Programming** - Data science and automation</li>
+  <li>📊 **R Programming** - Statistical analysis and visualization</li>
+  <li>⚡ **JavaScript/TypeScript** - Frontend and backend development</li>
+  <li>🧠 **Machine Learning** - Algorithms and practical applications</li>
+  <li>🏆 **Competitive Programming** - Problem solving and algorithms</li>
+  <li>📚 **Learning New Technologies** - Staying up-to-date with the latest trends</li>
 </ul>
 
-## Project structure
+## About This Site
 
-```
-├── public
-├── src
-│ ├── components
-│ ├── i18n
-│ │ ├── sidebar.ts
-│ │ ├── ui.ts
-│ ├── layouts
-│ ├── pages
-│ ├── styling
-│ ├── config.ts
-│ ├── types.ts
-├── .eslintrc.cjs
-├── .prettierignore
-├── .prettierrc.cjs
-├── astro.config.mjs
-├── tailwind.config.mjs
-├── tsconfig.json
-```
+This website is built with:
+
+<ul>
+  <li>⚡ **Astro** - Fast static site generator</li>
+  <li>🎨 **Tailwind CSS** - Utility-first CSS framework</li>
+  <li>🌙 **Dark/Light Mode** - Comfortable reading experience</li>
+  <li>🔍 **Search Functionality** - Find content quickly</li>
+  <li>🌍 **Multi-language Support** - English and Japanese</li>
+  <li>📱 **Responsive Design** - Works on all devices</li>
+  <li>⚡ **Fast Performance** - Optimized for speed</li>
+</ul>
+
+## Get Started
 
 <ul>
   <li>
-    `public/` - Static assets that will not be
-    processed by Astro
-  </li>
-  <li>`components/` - All components used in project</li>
-  <li>
-    `i18n/sidebar.ts` - Inside this file is defined `SIDEBAR` object which is
-    used for displaying sidebar links inside
-    `src/components/sidebar/SidebarLinks.astro`
+    📖 **<a href="/en/about">About Me</a>** - Learn more about who I am and what I do
   </li>
   <li>
-    `i18n/ui.ts` - Used for defining all languages which docs should be
-    translated to, and translations for ui
+    🚀 **<a href="/en/deploying">Deployment Guide</a>** - How this site is deployed
   </li>
-  <li>`layouts/` - All layouts used in project</li>
   <li>
-    `pages/` - Inside pages you should have `index.astro` (landing page for
-    `DEFAULT_LANGUAGE` in `config.ts`) and `lang.astro` for every other language defined in
-    `LANGUAGES` inside `src/i18n/ui.ts`
-
-    Inside pages you will also place your markdown files inside each lang folder.
-
+    📝 **<a href="/en/writing-docs">Writing Guidelines</a>** - How I structure my content
   </li>
-  <li>`styling/` - Used for defining external stylesheets</li>
-  <li>`config.ts` - Used for configuring the whole project</li>
-  <li>`types.ts` - Used for defining commonly used types</li>
-  <li>`.eslintrc.cjs` - Eslint config file</li>
-  <li>`.prettierignore` - In this file enter all directoriums or files you don't wanna get linted and formatted by default</li>
-  <li>`.prettierrc.cjs` - Prettier config file</li>
-  <li>`astro.config.mjs` - Astro config file</li>
-  <li>`tailwind.config.mjs` - Tailwind config file</li>
-  <li>`tsconfig.json` - Typescript config file</li>
 </ul>
 
-## Commands
+## Let's Connect!
 
-| Command                   | Action                                           |
-| ------------------------- | ------------------------------------------------ |
-| `npm install`             | Installs dependencies                            |
-| `npm run dev`             | Starts local dev server at `localhost:4321`      |
-| `npm run build`           | Build your production site to `./dist/`          |
-| `npm run format`          | Formats the whole project                        |
-| `npm run lint`            | Lints the whole project                          |
-| `npm run typecheck`       | Checks is there any type errors                  |
-| `npm run preview`         | Preview your build locally, before deploying     |
-| `npm run astro ...`       | Run CLI commands like `astro add`, `astro check` |
-| `npm run astro -- --help` | Get help using the Astro CLI                     |
+I'm always interested in:
+- 🤝 **Collaborating** on interesting projects
+- 💬 **Discussing** programming challenges and solutions
+- 📚 **Learning** from other developers' experiences
+- 🌟 **Sharing** knowledge and helping others grow
+
+Feel free to reach out if you'd like to connect or have any questions about my work!
+
+---
+
+*This site is continuously evolving as I learn and grow. Check back often for new content and updates!*
