--- a/src/pages/jp/introduction.mdx
+++ b/src/pages/jp/introduction.mdx
@@ -1,99 +1,73 @@
 ---
 layout: '@/layouts/Markdown.astro'
-title: Introduction
-description: Quick introduction to the project.
+title: はじめに
+description: 私の個人ブログとドキュメントサイトへようこそ。
 ---
 
-## About the project
+## 私のブログへようこそ！👋
 
-Stellar is documentation theme for Astro.js.
+こんにちは！私は**Yui Amai**です。これは私の個人ブログとドキュメントサイトです。プログラミング、新しい技術の学習、そして他の人と知識を共有することに情熱を持っています。
 
-The main purpose of this project
-is to give framework and library creators and maintainers a docs template they can use so they can focus more on
-writing the docs (markdown files), rather than setting up the whole docs project.
+## ここで見つけられるもの
 
-## Features
+このブログは以下のためのプラットフォームとして機能します：
+
+- 📝 **プログラミングと技術についての考えを共有**
+- 🚀 **新しいツールやフレームワークを探索する学習の旅を記録**
+- 💡 **他の人の役に立つかもしれないチュートリアルやガイドを執筆**
+- 🎯 **私が取り組んでいるプロジェクトや物事を紹介**
+- 🌍 **同様の興味を持つ他の開発者とつながる**
+
+## 私の重点分野
 
 <ul>
-  <li>Astro v4</li>
-  <li>Dark mode</li>
-  <li>I18n (type safe)</li>
-  <li>MD & MDX support</li>
-  <li>Search powered by fuse.js</li>
-  <li>Tailwind styling</li>
-  <li>View transitions API</li>
-  <li>Responsive & SEO-friendly</li>
-  <li>Shiki code syntax styling</li>
-  <li>Custom import path</li>
+  <li>🚀 **Web開発** - モダンなフレームワークとツール</li>
+  <li>🐍 **Pythonプログラミング** - データサイエンスと自動化</li>
+  <li>📊 **Rプログラミング** - 統計分析と可視化</li>
+  <li>⚡ **JavaScript/TypeScript** - フロントエンドとバックエンド開発</li>
+  <li>🧠 **機械学習** - アルゴリズムと実用的な応用</li>
+  <li>🏆 **競技プログラミング** - 問題解決とアルゴリズム</li>
+  <li>📚 **新しい技術の学習** - 最新のトレンドに追いつく</li>
 </ul>
 
-## Project structure
+## このサイトについて
 
-```
-├── public
-├── src
-│ ├── components
-│ ├── i18n
-│ │ ├── sidebar.ts
-│ │ ├── ui.ts
-│ ├── layouts
-│ ├── pages
-│ ├── styling
-│ ├── config.ts
-│ ├── types.ts
-├── .eslintrc.cjs
-├── .prettierignore
-├── .prettierrc.cjs
-├── astro.config.mjs
-├── tailwind.config.mjs
-├── tsconfig.json
-```
+このウェブサイトは以下で構築されています：
+
+<ul>
+  <li>⚡ **Astro** - 高速な静的サイトジェネレーター</li>
+  <li>🎨 **Tailwind CSS** - ユーティリティファーストのCSSフレームワーク</li>
+  <li>🌙 **ダーク/ライトモード** - 快適な読書体験</li>
+  <li>🔍 **検索機能** - コンテンツを素早く見つける</li>
+  <li>🌍 **多言語サポート** - 英語と日本語</li>
+  <li>📱 **レスポンシブデザイン** - すべてのデバイスで動作</li>
+  <li>⚡ **高速パフォーマンス** - 速度に最適化</li>
+</ul>
+
+## 始めましょう
 
 <ul>
   <li>
-    `public/` - Static assets that will not be
-    processed by Astro
-  </li>
-  <li>`components/` - All components used in project</li>
-  <li>
-    `i18n/sidebar.ts` - Inside this file is defined `SIDEBAR` object which is
-    used for displaying sidebar links inside
-    `src/components/sidebar/SidebarLinks.astro`
+    📖 **<a href="/jp/about">自己紹介</a>** - 私について、そして私が何をしているかをもっと詳しく知る
   </li>
   <li>
-    `i18n/ui.ts` - Used for defining all languages which docs should be
-    translated to, and translations for ui
+    🚀 **<a href="/jp/deploying">デプロイメントガイド</a>** - このサイトがどのようにデプロイされているか
   </li>
-  <li>`layouts/` - All layouts used in project</li>
   <li>
-    `pages/` - Inside pages you should have `index.astro` (landing page for
-    `DEFAULT_LANGUAGE` in `config.ts`) and `lang.astro` for every other language defined in
-    `LANGUAGES` inside `src/i18n/ui.ts`
-
-    Inside pages you will also place your markdown files inside each lang folder.
-
+    📝 **<a href="/jp/writing-docs">執筆ガイドライン</a>** - 私がコンテンツをどのように構成しているか
   </li>
-  <li>`styling/` - Used for defining external stylesheets</li>
-  <li>`config.ts` - Used for configuring the whole project</li>
-  <li>`types.ts` - Used for defining commonly used types</li>
-  <li>`.eslintrc.cjs` - Eslint config file</li>
-  <li>`.prettierignore` - In this file enter all directoriums or files you don't wanna get linted and formatted by default</li>
-  <li>`.prettierrc.cjs` - Prettier config file</li>
-  <li>`astro.config.mjs` - Astro config file</li>
-  <li>`tailwind.config.mjs` - Tailwind config file</li>
-  <li>`tsconfig.json` - Typescript config file</li>
 </ul>
 
-## Commands
+## つながりましょう！
 
-| Command                   | Action                                           |
-| ------------------------- | ------------------------------------------------ |
-| `npm install`             | Installs dependencies                            |
-| `npm run dev`             | Starts local dev server at `localhost:4321`      |
-| `npm run build`           | Build your production site to `./dist/`          |
-| `npm run format`          | Formats the whole project                        |
-| `npm run lint`            | Lints the whole project                          |
-| `npm run typecheck`       | Checks is there any type errors                  |
-| `npm run preview`         | Preview your build locally, before deploying     |
-| `npm run astro ...`       | Run CLI commands like `astro add`, `astro check` |
-| `npm run astro -- --help` | Get help using the Astro CLI                     |
+私は常に以下に興味があります：
+- 🤝 **興味深いプロジェクトでのコラボレーション**
+- 💬 **プログラミングの課題と解決策についての議論**
+- 📚 **他の開発者の経験から学習**
+- 🌟 **知識の共有と他の人の成長を支援**
+
+私の仕事について質問があったり、つながりたい場合は、お気軽にお声がけください！
+
+---
+
+*このサイトは私が学習し成長するにつれて継続的に進化しています。新しいコンテンツや更新のために、頻繁にチェックしてください！*
