Add blue gradient background, X icon, and simplify page content

--- a/src/pages/en/about.mdx
+++ b/src/pages/en/about.mdx
@@ -4,25 +4,36 @@ title: About Me
 description: Learn more about me
 ---
 
-# About Me
+# Academic Background
 
-Hello! I'm Yui Amai, a passionate developer and learner.
+- **PhD Student** – Biostatistics & Epidemiology, Graduate School of Medicine, The University of Tokyo  
+- **Master of Public Health** – Graduate School of Medicine, The University of Tokyo  
+- **Bachelor of Arts in Economics** – Faculty of Economics, Keio University
 
-## What I Do
+# Current Research
 
-I enjoy:
-- Programming and problem solving
-- Learning new technologies
-- Contributing to open source projects
-- Sharing knowledge through writing
+## Quality of Life Research
 
-## My Interests
+### Key Projects
 
-- **Programming Languages**: Python, R, JavaScript
-- **Web Development**: Modern frameworks and tools
-- **Data Science**: Machine learning and statistics
-- **Competitive Programming**: AtCoder and other platforms
+#### MCID-embedded Mean Change
+- Developing an innovative summary measure to analyze QOL changes
+- Integrating Minimal Clinically Important Difference (MCID) concepts
+- Applications in healthcare outcomes research and clinical trials
 
-## Get in Touch
+#### Q-COME: An Ongoing Cohort Study
+- **Q-COME**: Quality of life comparison of COnservative kidney Management and renal replacement therapy in patients with End-stage renal disease
+- **Population**: End-stage renal disease patients choosing between conservative kidney management and renal replacement therapy
+- **Purpose**: To understand the QOL implications of different treatment approaches and to promote shared-decision-making in ESRD care in Japan
 
-Feel free to reach out if you'd like to connect or collaborate on interesting projects!
+# Skills
+
+- **Languages**: Japanese, English, Chinese
+- **Statistical Programming**: R, SAS, Python
+
+# Research Interests
+
+- QOL measurement and analysis
+- Longitudinal data analysis
+- Missing data analysis
+- Shared decision making(SDM)
