--- a/src/pages/en/introduction.mdx
+++ b/src/pages/en/introduction.mdx
@@ -1,73 +1,13 @@
 ---
 layout: '@/layouts/Markdown.astro'
 title: Introduction
-description: Welcome to my personal blog and documentation site.
+description: Welcome to my personal blog.
 ---
 
 ## Welcome to My Blog! 👋
 
-Hello! I'm **Yui Amai**, and this is my personal blog and documentation site. I'm passionate about programming, learning new technologies, and sharing knowledge with others.
+Hello! I'm Yui Amai, a PhD student researching on Biostatistics & Epidemiology.
 
-## What You'll Find Here
+This blog is used to record some of my learning insights.
 
-This blog serves as a platform for me to:
-
-- 📝 **Share my thoughts** on programming and technology
-- 🚀 **Document my learning journey** as I explore new tools and frameworks
-- 💡 **Write tutorials and guides** that might help others
-- 🎯 **Showcase my projects** and the things I'm working on
-- 🌍 **Connect with fellow developers** who share similar interests
-
-## My Focus Areas
-
-<ul>
-  <li>🚀 **Web Development** - Modern frameworks and tools</li>
-  <li>🐍 **Python Programming** - Data science and automation</li>
-  <li>📊 **R Programming** - Statistical analysis and visualization</li>
-  <li>⚡ **JavaScript/TypeScript** - Frontend and backend development</li>
-  <li>🧠 **Machine Learning** - Algorithms and practical applications</li>
-  <li>🏆 **Competitive Programming** - Problem solving and algorithms</li>
-  <li>📚 **Learning New Technologies** - Staying up-to-date with the latest trends</li>
-</ul>
-
-## About This Site
-
-This website is built with:
-
-<ul>
-  <li>⚡ **Astro** - Fast static site generator</li>
-  <li>🎨 **Tailwind CSS** - Utility-first CSS framework</li>
-  <li>🌙 **Dark/Light Mode** - Comfortable reading experience</li>
-  <li>🔍 **Search Functionality** - Find content quickly</li>
-  <li>🌍 **Multi-language Support** - English and Japanese</li>
-  <li>📱 **Responsive Design** - Works on all devices</li>
-  <li>⚡ **Fast Performance** - Optimized for speed</li>
-</ul>
-
-## Get Started
-
-<ul>
-  <li>
-    📖 **<a href="/en/about">About Me</a>** - Learn more about who I am and what I do
-  </li>
-  <li>
-    🚀 **<a href="/en/deploying">Deployment Guide</a>** - How this site is deployed
-  </li>
-  <li>
-    📝 **<a href="/en/writing-docs">Writing Guidelines</a>** - How I structure my content
-  </li>
-</ul>
-
-## Let's Connect!
-
-I'm always interested in:
-- 🤝 **Collaborating** on interesting projects
-- 💬 **Discussing** programming challenges and solutions
-- 📚 **Learning** from other developers' experiences
-- 🌟 **Sharing** knowledge and helping others grow
-
-Feel free to reach out if you'd like to connect or have any questions about my work!
-
----
-
-*This site is continuously evolving as I learn and grow. Check back often for new content and updates!*
+Thank you for visiting.
