--- a/src/pages/jp/about.mdx
+++ b/src/pages/jp/about.mdx
@@ -4,25 +4,36 @@ title: 自己紹介
 description: 私について詳しく知る
 ---
 
-# 自己紹介
+# プロファイル
 
-こんにちは！私はYui Amaiです。情熱的な開発者であり学習者です。
+- **博士課程学生** – 生物統計学・疫学、医学系研究科、東京大学
+- **公衆衛生学修士** – 医学系研究科、東京大学
+- **経済学学士** – 経済学部、慶應義塾大学
 
-## 私の活動
+# 現在の研究
 
-私は以下を楽しんでいます：
-- プログラミングと問題解決
-- 新しい技術の学習
-- オープンソースプロジェクトへの貢献
-- 執筆を通じた知識の共有
+## 生活の質（QOL）研究
 
-## 興味・関心
+### 主要プロジェクト
 
-- **プログラミング言語**: Python、R、JavaScript
-- **Web開発**: モダンなフレームワークとツール
-- **データサイエンス**: 機械学習と統計学
-- **競技プログラミング**: AtCoderなどのプラットフォーム
+#### MCID-embedded Mean Change
+- QOL変化を分析するための革新的な要約指標の開発
+- 最小臨床的意義差（MCID）概念の統合
+- 医療アウトカム研究と臨床試験への応用
 
-## お問い合わせ
+#### Q-COME: 進行中のコホート研究
+- **Q-COME**: 末期腎不全患者における保存的腎臓管理と腎代替療法の生活の質比較
+- **対象集団**: 保存的腎臓管理と腎代替療法を選択する末期腎不全患者
+- **目的**: 異なる治療アプローチのQOLへの影響の理解と、日本のESRDケアにおける共有意思決定の促進
 
-興味深いプロジェクトでのコラボレーションや、お気軽にお声がけください！
+# スキル
+
+- **言語**: 日本語、英語、中国語
+- **統計プログラミング**: R、SAS、Python
+
+# 研究関心
+
+- QOLの測定と分析
+- 縦断データ分析
+- 欠損データ分析
+- 共同意思決定(SDM)
