--- a/src/pages/jp/introduction.mdx
+++ b/src/pages/jp/introduction.mdx
@@ -1,73 +1,13 @@
 ---
 layout: '@/layouts/Markdown.astro'
 title: はじめに
-description: 私の個人ブログとドキュメントサイトへようこそ。
+description: 私の個人ブログへようこそ。
 ---
 
 ## 私のブログへようこそ！👋
 
-こんにちは！私は**Yui Amai**です。これは私の個人ブログとドキュメントサイトです。プログラミング、新しい技術の学習、そして他の人と知識を共有することに情熱を持っています。
+こんにちは！私はYui Amaiです。生物統計学・疫学を研究する博士課程学生です。
 
-## ここで見つけられるもの
+このブログは私の学習の洞察を記録するために使用されています。
 
-このブログは以下のためのプラットフォームとして機能します：
-
-- 📝 **プログラミングと技術についての考えを共有**
-- 🚀 **新しいツールやフレームワークを探索する学習の旅を記録**
-- 💡 **他の人の役に立つかもしれないチュートリアルやガイドを執筆**
-- 🎯 **私が取り組んでいるプロジェクトや物事を紹介**
-- 🌍 **同様の興味を持つ他の開発者とつながる**
-
-## 私の重点分野
-
-<ul>
-  <li>🚀 **Web開発** - モダンなフレームワークとツール</li>
-  <li>🐍 **Pythonプログラミング** - データサイエンスと自動化</li>
-  <li>📊 **Rプログラミング** - 統計分析と可視化</li>
-  <li>⚡ **JavaScript/TypeScript** - フロントエンドとバックエンド開発</li>
-  <li>🧠 **機械学習** - アルゴリズムと実用的な応用</li>
-  <li>🏆 **競技プログラミング** - 問題解決とアルゴリズム</li>
-  <li>📚 **新しい技術の学習** - 最新のトレンドに追いつく</li>
-</ul>
-
-## このサイトについて
-
-このウェブサイトは以下で構築されています：
-
-<ul>
-  <li>⚡ **Astro** - 高速な静的サイトジェネレーター</li>
-  <li>🎨 **Tailwind CSS** - ユーティリティファーストのCSSフレームワーク</li>
-  <li>🌙 **ダーク/ライトモード** - 快適な読書体験</li>
-  <li>🔍 **検索機能** - コンテンツを素早く見つける</li>
-  <li>🌍 **多言語サポート** - 英語と日本語</li>
-  <li>📱 **レスポンシブデザイン** - すべてのデバイスで動作</li>
-  <li>⚡ **高速パフォーマンス** - 速度に最適化</li>
-</ul>
-
-## 始めましょう
-
-<ul>
-  <li>
-    📖 **<a href="/jp/about">自己紹介</a>** - 私について、そして私が何をしているかをもっと詳しく知る
-  </li>
-  <li>
-    🚀 **<a href="/jp/deploying">デプロイメントガイド</a>** - このサイトがどのようにデプロイされているか
-  </li>
-  <li>
-    📝 **<a href="/jp/writing-docs">執筆ガイドライン</a>** - 私がコンテンツをどのように構成しているか
-  </li>
-</ul>
-
-## つながりましょう！
-
-私は常に以下に興味があります：
-- 🤝 **興味深いプロジェクトでのコラボレーション**
-- 💬 **プログラミングの課題と解決策についての議論**
-- 📚 **他の開発者の経験から学習**
-- 🌟 **知識の共有と他の人の成長を支援**
-
-私の仕事について質問があったり、つながりたい場合は、お気軽にお声がけください！
-
----
-
-*このサイトは私が学習し成長するにつれて継続的に進化しています。新しいコンテンツや更新のために、頻繁にチェックしてください！*
+ご訪問ありがとうございます。
