Improve typography: add Shippori Mincho B1 font, better line spacing, and new gradient backgrounds

--- a/src/pages/jp/about.mdx
+++ b/src/pages/jp/about.mdx
@@ -1,14 +1,14 @@
 ---
 layout: '@/layouts/Markdown.astro'
 title: 自己紹介
-description: 私について詳しく知る
+description: 
 ---
 
 # プロファイル
 
-- **博士課程学生** – 生物統計学・疫学、医学系研究科、東京大学
-- **公衆衛生学修士** – 医学系研究科、東京大学
-- **経済学学士** – 経済学部、慶應義塾大学
+- **博士課程学生** – 東京大学大学院医学系研究科　生物統計学・疫学
+- **公衆衛生学修士** – 東京大学大学院医学系研究科
+- **経済学学士** – 慶應義塾大学経済学部
 
 # 現在の研究
 
@@ -17,8 +17,8 @@ description: 私について詳しく知る
 ### 主要プロジェクト
 
 #### MCID-embedded Mean Change
-- QOL変化を分析するための革新的な要約指標の開発
-- 最小臨床的意義差（MCID）概念の統合
+- QOL変化を分析するための新しい要約指標の開発
+- 臨床的意味のある最小差（MCID）概念の統合
 - 医療アウトカム研究と臨床試験への応用
 
 #### Q-COME: 進行中のコホート研究
