--- a/src/pages/jp/introduction.mdx
+++ b/src/pages/jp/introduction.mdx
@@ -1,13 +1,14 @@
 ---
 layout: '@/layouts/Markdown.astro'
 title: はじめに
-description: 私の個人ブログへようこそ。
+description:
 ---
 
 ## 私のブログへようこそ！👋
 
-こんにちは！私はYui Amaiです。生物統計学・疫学を研究する博士課程学生です。
+こんにちは！Yui Amaiです。
+生物統計学・疫学を研究する博士課程学生です。
 
-このブログは私の学習の洞察を記録するために使用されています。
+学習・研究を記録するためのブログです。
 
 ご訪問ありがとうございます。
