UI improvements: update favicon to rain icon, optimize color scheme, fix language display, improve button styles and navigation icons

--- a/src/pages/en/about.mdx
+++ b/src/pages/en/about.mdx
@@ -1,7 +1,7 @@
 ---
 layout: '@/layouts/Markdown.astro'
 title: About Me
-description: Learn more about me
+description: Yui Amai
 ---
 
 # Academic Background
@@ -10,11 +10,9 @@ description: Learn more about me
 - **Master of Public Health** – Graduate School of Medicine, The University of Tokyo  
 - **Bachelor of Arts in Economics** – Faculty of Economics, Keio University
 
-# Current Research
+# Current Research Topics
 
-## Quality of Life Research
-
-### Key Projects
+### Quality of Life
 
 #### MCID-embedded Mean Change
 - Developing an innovative summary measure to analyze QOL changes
@@ -36,4 +34,4 @@ description: Learn more about me
 - QOL measurement and analysis
 - Longitudinal data analysis
 - Missing data analysis
-- Shared decision making(SDM)
+- Shared decision making (SDM)
