--- a/src/pages/en/introduction.mdx
+++ b/src/pages/en/introduction.mdx
@@ -1,12 +1,12 @@
 ---
 layout: '@/layouts/Markdown.astro'
 title: Introduction
-description: Welcome to my personal blog.
+description: Hello! I'm Yui Amai, a PhD student researching on Biostatistics & Epidemiology.
 ---
 
 ## Welcome to My Blog! 👋
 
-Hello! I'm Yui Amai, a PhD student researching on Biostatistics & Epidemiology.
+
 
 This blog is used to record some of my learning insights.
 
