--- a/src/pages/jp/about.mdx
+++ b/src/pages/jp/about.mdx
@@ -1,7 +1,7 @@
 ---
 layout: '@/layouts/Markdown.astro'
 title: 自己紹介
-description: 
+description: ゆい　あまい
 ---
 
 # プロファイル
@@ -12,9 +12,7 @@ description:
 
 # 現在の研究
 
-## 生活の質（QOL）研究
-
-### 主要プロジェクト
+### 生活の質（QOL）研究
 
 #### MCID-embedded Mean Change
 - QOL変化を分析するための新しい要約指標の開発
