--- a/src/pages/jp/introduction.mdx
+++ b/src/pages/jp/introduction.mdx
@@ -1,13 +1,13 @@
 ---
 layout: '@/layouts/Markdown.astro'
 title: はじめに
-description:
+description: こんにちは！ ゆい　あまいです。
+
 ---
 
 ## 私のブログへようこそ！👋
 
-こんにちは！Yui Amaiです。
-生物統計学・疫学を研究する博士課程学生です。
+
 
 学習・研究を記録するためのブログです。
 
