feat: complete blog customization - update fonts, styling, content and README

--- a/src/pages/jp/about.mdx
+++ b/src/pages/jp/about.mdx
@@ -6,9 +6,9 @@ description: ゆい　あまい
 
 # プロファイル
 
-- **博士課程学生** – 東京大学大学院医学系研究科　生物統計学・疫学
-- **公衆衛生学修士** – 東京大学大学院医学系研究科
-- **経済学学士** – 慶應義塾大学経済学部
+- **博士課程学生** – 東京大学大学院医学系研究科　疫学・生物統計学分野
+- **公衆衛生学修士** – 東京大学大学院医学系研究科　公共健康医学専攻(SPH)
+- **経済学学士** – 慶應義塾大学経済学部経済学科
 
 # 現在の研究
 
@@ -21,7 +21,7 @@ description: ゆい　あまい
 
 #### Q-COME: 進行中のコホート研究
 - **Q-COME**: 末期腎不全患者における保存的腎臓管理と腎代替療法の生活の質比較
-- **対象集団**: 保存的腎臓管理と腎代替療法を選択する末期腎不全患者
+- **対象集団**: 保存的腎臓療法と腎代替療法を選択する末期腎不全患者
 - **目的**: 異なる治療アプローチのQOLへの影響の理解と、日本のESRDケアにおける共有意思決定の促進
 
 # スキル
