Clean up repository: remove unused template pages and add logos

--- a/src/pages/en/about.mdx
+++ b/src/pages/en/about.mdx
@@ -1,14 +1,14 @@
 ---
 layout: '@/layouts/Markdown.astro'
 title: About Me
-description: Yui Amai
+description: Yui Amai  🌷she/her
 ---
 
-# Academic Background
+# Educations
 
-- **PhD Student** – Biostatistics & Epidemiology, Graduate School of Medicine, The University of Tokyo  
-- **Master of Public Health** – Graduate School of Medicine, The University of Tokyo  
-- **Bachelor of Arts in Economics** – Faculty of Economics, Keio University
+- PhD Student – Biostatistics & Epidemiology, Graduate School of Medicine, The University of Tokyo  
+- Master of Public Health – Graduate School of Medicine, The University of Tokyo  
+- Bachelor of Arts in Economics – Faculty of Economics, Keio University
 
 # Current Research Topics
 
@@ -20,18 +20,25 @@ description: Yui Amai
 - Applications in healthcare outcomes research and clinical trials
 
 #### Q-COME: An Ongoing Cohort Study
-- **Q-COME**: Quality of life comparison of COnservative kidney Management and renal replacement therapy in patients with End-stage renal disease
-- **Population**: End-stage renal disease patients choosing between conservative kidney management and renal replacement therapy
-- **Purpose**: To understand the QOL implications of different treatment approaches and to promote shared-decision-making in ESRD care in Japan
-
-# Skills
-
-- **Languages**: Japanese, English, Chinese
-- **Statistical Programming**: R, SAS, Python
+- <u>Q</u>uality of life comparison of <u>CO</u>nservative kidney <u>M</u>anagement and renal replacement therapy in patients with <u>E</u>nd-stage renal disease
+- Population: Patients with end-stage renal disease (eGFR≦15) deciding between treatment options
+- Purpose: To understand the QOL implications of different treatment approaches and to promote shared-decision-making in ESRD care in Japan
 
 # Research Interests
 
 - QOL measurement and analysis
+- Chronic kidney disease / Conservative care
+- Shared decision making (SDM)
 - Longitudinal data analysis
 - Missing data analysis
-- Shared decision making (SDM)
+
+# Skills
+
+- Languages: Japanese, English, Chinese
+- Statistical Programming: R, SAS, Python
+
+# Contact
+
+Feel free to contact: yui.amai✦outlook.com (replace ✦ with @)
+
+---
