--- a/src/pages/en/introduction.mdx
+++ b/src/pages/en/introduction.mdx
@@ -4,7 +4,7 @@ title: Introduction
 description: Hello! I'm Yui Amai, a PhD student researching on Biostatistics & Epidemiology.
 ---
 
-## Welcome to My Blog! 👋
+## Welcome to My Blog 💐
 
 
 
