--- a/src/pages/jp/about.mdx
+++ b/src/pages/jp/about.mdx
@@ -1,16 +1,16 @@
 ---
 layout: '@/layouts/Markdown.astro'
 title: 自己紹介
-description: ゆい　あまい
+description: ゆい　あまい　🌷she/her
 ---
 
-# プロファイル
+# 経歴
 
-- **博士課程学生** – 東京大学大学院医学系研究科　疫学・生物統計学分野
-- **公衆衛生学修士** – 東京大学大学院医学系研究科　公共健康医学専攻(SPH)
-- **経済学学士** – 慶應義塾大学経済学部経済学科
+- 博士課程学生 – 東京大学大学院医学系研究科　疫学・生物統計学分野
+- 公衆衛生学修士 – 東京大学大学院医学系研究科　公共健康医学専攻（SPH）
+- 経済学学士 – 慶應義塾大学経済学部経済学科
 
-# 現在の研究
+# 現在の研究内容
 
 ### 生活の質（QOL）研究
 
@@ -20,18 +20,27 @@ description: ゆい　あまい
 - 医療アウトカム研究と臨床試験への応用
 
 #### Q-COME: 進行中のコホート研究
-- **Q-COME**: 末期腎不全患者における保存的腎臓管理と腎代替療法の生活の質比較
-- **対象集団**: 保存的腎臓療法と腎代替療法を選択する末期腎不全患者
-- **目的**: 異なる治療アプローチのQOLへの影響の理解と、日本のESRDケアにおける共有意思決定の促進
+- 末期腎不全患者における保存的腎臓療法と腎代替療法の生活の質比較
+- 対象集団：療法選択をする末期腎不全患者（eGFR≦15）
+- 目的：異なる治療アプローチのQOLへの影響の理解と、日本のESRDケアにおける共有意思決定の促進
+
+
+
+# 関心のあるテーマ
+
+- QOLの測定と分析
+- 慢性腎臓病／緩和ケア
+- 共同意思決定（SDM）
+- 縦断データ解析
+- 欠損データ解析
 
 # スキル
 
-- **言語**: 日本語、英語、中国語
-- **統計プログラミング**: R、SAS、Python
+- 言語：日本語、英語、中国語
+- 統計プログラミング：R、SAS、Python
 
-# 研究関心
+# 連絡先
 
-- QOLの測定と分析
-- 縦断データ分析
-- 欠損データ分析
-- 共同意思決定(SDM)
+お気軽にご連絡ください: yui.amai✦outlook.com (✦を@に置き換えてください)
+
+---
