Add ripple effect to navigation buttons and adjust scrollbar colors

--- a/src/pages/en/about.mdx
+++ b/src/pages/en/about.mdx
@@ -4,7 +4,7 @@ title: About Me
 description: Yui Amai  🌷she/her
 ---
 
-# Educations
+# Background
 
 - PhD Student – Biostatistics & Epidemiology, Graduate School of Medicine, The University of Tokyo  
 - Master of Public Health – Graduate School of Medicine, The University of Tokyo  
@@ -41,4 +41,3 @@ description: Yui Amai  🌷she/her
 
 Feel free to contact: yui.amai✦outlook.com (replace ✦ with @)
 
----
