Complete blog system with categories, tags, navigation and UI improvements

--- a/src/pages/en/introduction.mdx
+++ b/src/pages/en/introduction.mdx
@@ -1,5 +1,5 @@
 ---
-layout: '@/layouts/Markdown.astro'
+layout: '@/layouts/Introduction.astro'
 title: Introduction
 description: Hello! I'm Yui Amai, a PhD student researching on Biostatistics & Epidemiology.
 ---
